[gd_scene load_steps=12 format=2]

[ext_resource path="res://BlinkingMaterial.tres" type="Material" id=1]
[ext_resource path="res://StateMachine/FiniteStateMachine.gd" type="Script" id=2]
[ext_resource path="res://Monsters/MovementAI.gd" type="Script" id=3]
[ext_resource path="res://Scripts/DamageArea.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=5]
[ext_resource path="res://Enemy.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Scripts/EnemyPackStates/WalkTowards.gd" type="Script" id=7]
[ext_resource path="res://Scenes/BloodEffect.tscn" type="PackedScene" id=8]
[ext_resource path="res://Looting/ExpDrop.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.3333, 9.16667 )

[sub_resource type="CircleShape2D" id=2]
radius = 23.3928

[node name="EnemyPack" type="KinematicBody2D" groups=["ENEMIES"]]
scale = Vector2( 0.6, 0.6 )
collision_layer = 8
collision_mask = 11
script = ExtResource( 3 )
ExpOrb = ExtResource( 9 )
DamageEffect = ExtResource( 8 )
startStatePath = NodePath("FiniteStateMachine/WalkTowards")
speed = 15

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 1 )
position = Vector2( 3, -18 )
frames = ExtResource( 6 )
animation = "left_walk"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.16667 )
shape = SubResource( 1 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 5 )
maximumHealth = 150

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="DamageArea"]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="WalkTowards" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 7 )

[connection signal="damageTaken" from="Health" to="." method="_on_Health_damageTaken"]
[connection signal="healthDepleted" from="Health" to="." method="_on_Health_healthDepleted"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DamageArea/Timer" to="DamageArea" method="_on_Timer_timeout"]
